Stabilize header spinner and fix alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,14 @@
 		}
 	}
 
+	&__spinner {
+		width: 24px;
+		height: 24px;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+	}
+
 	&__helper {
 		margin-top: 12px;
 		margin-bottom: 0;
